tests/cases/control-flow/ok/while-true-continue-noreturn.ari
fn main() -> i64 {
  while true {
    continue;
  }
}
