tests/cases/control-flow/errors/break-outside-loop.ari
fn main() -> i64 {
  break;
  return 0;
}
